[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/theme/fonts/font_title_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/theme/fonts/font_text_bold_italics.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/theme/panel_darker.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/icons/checkmark_valid.svg" type="Texture" id=5]
[ext_resource path="res://ui/screens/lesson/UIBaseQuiz.gd" type="Script" id=6]
[ext_resource path="res://ui/theme/button_outline_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/theme/button_outline_hover.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/theme/button_outline_pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/theme/button_outline_focus.tres" type="StyleBox" id=10]

[node name="UIBaseQuiz" type="PanelContainer"]
margin_right = 400.0
margin_bottom = 202.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 4 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Outline" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 202.0

[node name="ClipContentBoundary" type="Control" parent="."]
margin_right = 400.0
margin_bottom = 202.0
rect_clip_content = true

[node name="ChoiceContainer" type="MarginContainer" parent="ClipContentBoundary"]
margin_right = 400.0
margin_bottom = 202.0
rect_clip_content = true

[node name="ChoiceView" type="VBoxContainer" parent="ClipContentBoundary/ChoiceContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 182.0

[node name="QuizHeader" type="HBoxContainer" parent="ClipContentBoundary/ChoiceContainer/ChoiceView"]
margin_right = 360.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="RichTextLabel" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/QuizHeader"]
margin_right = 320.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[b]Question[/b]"
meta_underlined = false
text = "Question"
fit_content_height = true
scroll_active = false

[node name="CompletedBeforeIcon" type="TextureRect" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/QuizHeader"]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 336.0
margin_right = 360.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
hint_tooltip = "You've already answered this quiz correctly before.
Feel free to try it again to refresh your memory!"
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Content" type="RichTextLabel" parent="ClipContentBoundary/ChoiceContainer/ChoiceView"]
margin_top = 46.0
margin_right = 360.0
margin_bottom = 75.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Explanation"
text = "Explanation"
fit_content_height = true

[node name="Answers" type="VBoxContainer" parent="ClipContentBoundary/ChoiceContainer/ChoiceView"]
margin_top = 91.0
margin_right = 360.0
margin_bottom = 91.0

[node name="HBoxContainer" type="HBoxContainer" parent="ClipContentBoundary/ChoiceContainer/ChoiceView"]
margin_top = 107.0
margin_right = 360.0
margin_bottom = 162.0
alignment = 1

[node name="SkipButton" type="Button" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/HBoxContainer"]
margin_left = 52.0
margin_right = 172.0
margin_bottom = 55.0
rect_min_size = Vector2( 120, 0 )
hint_tooltip = "You need to try to answer once before you can skip a quiz."
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 7 )
disabled = true
text = "Skip"

[node name="SubmitButton" type="Button" parent="ClipContentBoundary/ChoiceContainer/ChoiceView/HBoxContainer"]
margin_left = 188.0
margin_right = 308.0
margin_bottom = 55.0
rect_min_size = Vector2( 120, 0 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 10 )
custom_styles/normal = ExtResource( 7 )
text = "Submit"

[node name="HelpMessage" type="Label" parent="ClipContentBoundary/ChoiceContainer/ChoiceView"]
visible = false
margin_top = 208.0
margin_right = 360.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.14902, 0.776471, 0.968627, 1 )
autowrap = true

[node name="ResultContainer" type="MarginContainer" parent="ClipContentBoundary"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 111.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultView" type="VBoxContainer" parent="ClipContentBoundary/ResultContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="ClipContentBoundary/ResultContainer/ResultView"]
margin_right = 360.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.960784, 0.980392, 0.980392, 1 )
custom_fonts/font = ExtResource( 1 )
text = "You're right!"

[node name="CorrectAnswer" type="Label" parent="ClipContentBoundary/ResultContainer/ResultView"]
visible = false
margin_top = 42.0
margin_right = 600.0
margin_bottom = 70.0
rect_min_size = Vector2( 600, 0 )
custom_colors/font_color = Color( 0.572549, 0.560784, 0.721569, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Answers here"
autowrap = true

[node name="Explanation" type="RichTextLabel" parent="ClipContentBoundary/ResultContainer/ResultView"]
margin_top = 42.0
margin_right = 360.0
margin_bottom = 71.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Explanation"
text = "Explanation"
fit_content_height = true

[node name="ErrorTween" type="Tween" parent="."]

[node name="SizeTween" type="Tween" parent="."]
